--- a/app/views/rounds/select_course.html.erb
+++ b/app/views/rounds/select_course.html.erb
@@ -1,7 +1,11 @@
+
+
+<h1>ラウンドする</h1>
 <h2>ゴルフ場選択</h2>
 
-<%= form_tag("/search", method: :post) do %>
-    <%= text_field_tag :keyword %><br>
-    <%= select_tag :todoufuken, options_for_select(@todoufukens.invert.to_a, 102) %><br> 
-    <%= submit_tag '検索' %>
-  <% end %>
+<p>検索</p>
+<%= form_tag("/rounds/search", method: :post) do %>
+  <%= text_field_tag :keyword %><br>
+  <%= select_tag :todoufuken, options_for_select(@todoufukens.invert.to_a, 102) %><br> 
+  <%= submit_tag '検索' %>
+<% end %>
