--- a/app/views/coursenames/index.html.erb
+++ b/app/views/coursenames/index.html.erb
@@ -1,15 +1,16 @@
-<div class="grid-6">
-  <%= link_to "ログイン", new_user_session_path, class: 'post' %>
-  <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
-</div>
+# <div class="grid-6">
+#   <%= link_to "ログイン", new_user_session_path, class: 'post' %>
+#   <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
+# </div>
 
-<h2>ゴルフ場選択</h2>
+# <h1>ラウンドする</h1>
+# <h2>ゴルフ場選択</h2>
 
-<p>検索</p>
-<%= form_tag("/search", method: :post) do %>
-  <%= text_field_tag :keyword %><br>
-  <%= select_tag :todoufuken, options_for_select(@todoufukens.invert.to_a, 102) %><br> 
-  <%= submit_tag '検索' %>
-<% end %>
-<%= link_to "ラウンドする", round_select_course_path %>
-<%= link_to "過去のスコアを見る", archives_index_path %>
+# <p>検索</p>
+# <%= form_tag("/search", method: :post) do %>
+#   <%= text_field_tag :keyword %><br>
+#   <%= select_tag :todoufuken, options_for_select(@todoufukens.invert.to_a, 102) %><br> 
+#   <%= submit_tag '検索' %>
+# <% end %>
+# <%= link_to "ラウンドする", select_course_path %>
+# <%= link_to "過去のスコアを見る", archives_index_path %>
