--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,7 @@
   <%= link_to "ログイン", new_user_session_path, class: 'post' %>
   <%= link_to "サインアップ", new_user_registration_path, class: 'post' %>
 </div>
-<%= link_to "ラウンドする",  rounds_select_course_url %>
+<%= link_to "ラウンドする", select_course_path %>
 <%= link_to "過去のスコアを見る", archives_index_path %>
+
+<time><%=  @day %></time>
