--- a/app/views/rounds/search.html.erb
+++ b/app/views/rounds/search.html.erb
@@ -10,6 +10,6 @@
 
 
 <% @json["Items"].each do|item| %>
-<%= link_to item["Item"]["golfCourseName"] , test_path(golfCourseName: item["Item"]["golfCourseName"]) %> <br>
+<%= link_to item["Item"]["golfCourseName"] , round_start_path(golfCourseName: item["Item"]["golfCourseName"]) %> <br>
 <% end %>
 <% end %>
