--- a/app/views/rounds/select_course.html.erb
+++ b/app/views/rounds/select_course.html.erb
@@ -9,3 +9,5 @@
   <%= select_tag :todoufuken, options_for_select(@todoufukens.invert.to_a, 102) %><br> 
   <%= submit_tag '検索' %>
 <% end %>
+
+<%= link_to "トップにもどる", root_path %>
