--- a/app/views/rounds/play.html.erb
+++ b/app/views/rounds/play.html.erb
@@ -13,7 +13,7 @@
 
 
 
-<span> <%= link_to "編集", edit_hole_score_path(round_id: m.round_id, hole_number: m.hole_number) %> </span><br>
+<span> <%= link_to "編集", hole_score_input_path(round_id: m.round_id, hole_number: m.hole_number) %> </span><br>
 <% end %>
 
 
