--- a/app/views/rounds/search.html.erb
+++ b/app/views/rounds/search.html.erb
@@ -8,7 +8,7 @@
 <% else %>
 
     <% @json["Items"].each do|item| %>
-        <%= link_to item["Item"]["golfCourseName"], round_start_path(course: item["Item"]["golfCourseName"]) %> <br>
+        <%= link_to item["Item"]["golfCourseName"], round_start_path(course: item["Item"]["golfCourseName"]), data: { confirm: item["Item"]["golfCourseName"] + 'でラウンドを開始します。よろしいですか？' }  %> <br>
     <% end %>
 <% end %>
 
