--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -1,11 +1,19 @@
 <h1>過去のスコアをみれます。</h1>
 
 
-<% @score_round.each do |c| %>
-  <span><%= link_to c[0] ,score_card_path(round_id: c[2]) %> </span>
-  <span><%= c[1] %>さん</span>
-  <br>
-  <% end %>
-</div>
 
+<%# link_to c[0] ,score_card_path(round_id: c[2]) %>
+
+<h2>平均スコア</h2>
+<% x = @score_sum %>
+平均スコア：<%= sprintf("%.2f", x.values.inject(:+) / x.values.length.to_f) %><br>
+ベストスコア：<%=  x.values.min %><br>
+
+<% @score.zip(@score_sum) do |a,b| %>
+	<%= link_to a[0], score_card_path(round_id: a[2]) %>	
+	<%= a[3].strftime('%Y年%-m月%-d日(%a)') %>
+	<%= format('%+d', b[1] ) %><br>
+<% end %>
 <%= link_to "トップにもどる", root_path %>
+<br>
+
