--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,22 @@
 <h1><%= @user.name %>さんのページ</h1>
-<%= render 'follow_form' %>
-<%= render 'stats' %>
+<p><%= @user.introduction  %></p>
 
-<h2>ラウンド結果</h2>
-
-
-
-
-
-
-<% @score.zip(@score_sum) do |a,b| %>
-	<%= link_to a[0], user_scorecard_path(round_id: a[2], id: params[:id]) %>
-	
-	<%= a[3].strftime('%Y年%-m月%-d日(%a)') %>
-	<%= format('%+d', b[1] ) %><br>
-
-
-
-
+<% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
+    <%= render 'follow_form' %>
+    <%= render 'stats' %>
+<% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
+    <%= render 'stats' %>
+    <span>ゲストログインだから、フォロー機能使えません。</span>
 <% end %>
 
 
+<h2>ラウンド結果</h2>
+
+<% @score.zip(@score_sum) do |a,b| %>
+	<%= link_to a[0], user_scorecard_path(round_id: a[2], id: params[:id]) %>	
+	<%= a[3].strftime('%Y年%-m月%-d日(%a)') %>
+	<%= format('%+d', b[1] ) %><br>
+
+<% end %>
 
 <%= link_to "トップにもどる", root_path %>
