--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,6 +15,8 @@
 <%= link_to "掲示板を覗く", messages_index_path %><br />
 <%= link_to "過去のスコアを見る", archives_index_path %><br />
 <%= link_to "プレイヤー検索", user_index_path %><br />
+<%= link_to "マイページ", mypage_path %><br />
+
 
 
 
