--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,13 @@
 <h1><%= @user.name %>さんのページ</h1>
 <p><%= @user.introduction  %></p>
 
+<% if @user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
+  <p>
+    <strong>Avatar:</strong>
+    <%= image_tag @user.avatar.url %><!-- userインスタンスの画像ファイルのURLを取得し表示 -->
+  </p>
+<% end %>
+
 <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
     <%= render 'follow_form' %>
     <%= render 'stats' %>
