--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   </head>
 
   <body>
-     <%= render 'layouts/flash.scores' %>
+    <%= render 'layouts/header' %>
+    <%= render 'layouts/flash.scores' %>
+     
     <%= yield %>
   </body>
 </html>
