--- a/app/views/messages/show_message.html.erb
+++ b/app/views/messages/show_message.html.erb
@@ -7,8 +7,9 @@
   <%= button_to 'いいねを取り消す', {controller: 'likes', action: 'destroy'}, {method: :delete } %>
   
 <% else %>
-<%= button_to 'いいね', likes_path(@post) %>
-
+<form action="/likes" method="post">
+<%= link_to 'いいね', likes_path(@post) %>
+</form>
 <% end %>
 <h2>いいねしたユーザー</h2>
 <% @message.liked_users.each do |user| %>
