--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,6 @@
     <%= render 'layouts/flash.scores' %>
      
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
