--- a/app/views/golfcourses/search.html.erb
+++ b/app/views/golfcourses/search.html.erb
@@ -1,5 +1,5 @@
 <h1>ラウンドするゴルフ場を選択</h1>
-
+<%= select_month(Date.today) %>
 
 
 <p>検索</p>
@@ -8,12 +8,14 @@
   <%= submit_tag 'Search', :golfcoursename => nil %>
 <% end %>
 <% @search_golfcoursename.each do |name| %><br>
-	<%= name.golfcoursename %>
+	<%= name.golfcoursename %><br>
+	<%= name.address %><br>
+	<%= name.golfcoursecaption %><br>
 <% end %>
 <%= paginate @search_golfcoursename %>
 
 
-<% @golfcoursename_all.each do |n| %>
-	<%= n.golfcoursename %><br>
-<% end %>
-<%= paginate @golfcoursename_all %>
+<%# @golfcoursename_all.each do |n| %>
+	<%#= n.golfcoursename %><br>
+<%# end %>
+<%#= paginate @golfcoursename_all %>
