--- a/app/views/messages/index_course.html.erb
+++ b/app/views/messages/index_course.html.erb
@@ -9,4 +9,5 @@
 <span>投稿者 <%= m.user.name %> さん</span><br>
 <% end %>
 
-<%= link_to "トップにもどる", root_path %>
+<%= link_to "メッセージ一覧にもどる", messages_index_path %><br>
+<%= link_to "トップにもどる", root_path %><br>
